Salvando coias novas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <img src="assets/logo.png" alt="">
+
+
+
     <h1>Site de Estudos</h1>
 
     <p>
@@ -14,6 +19,25 @@
         Voluptatibus, temporibus quia unde nisi non necessitatibus eveniet perspiciatis qui porro magni saepe corporis eaque quisquam nihil ea recusandae laudantium consectetur fuga natus, et quas? Reiciendis labore iure commodi ab.
         Nisi veniam, quasi modi quidem facere atque consequatur. Dolor officiis praesentium obcaecati beatae, porro magni, iure sequi omnis aut laborum illum, non quam a fugit sed nihil! Quo, voluptates ipsam!
     </p>
+
+
+<button>
+    <a href="lista_senai.html">LISTA</a>
+</button>
+
+<hr>
+
+    <button>
+        <a href="http://senai.com.br">SENAI</a>
+    </button>
+
+<hr>
+
+    <button>
+        <a href="http://OperaGX.com.br">OPERA</a>
+    </button>
+
+
 
 </body>
 </html>
