--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SENAI</title>
+    <title>PixelVivo.com.br</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
 
 
 
-    <h1>Site de Estudos</h1>
+    <h1>PixelVivo</h1>
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, earum ipsa laudantium accusamus laboriosam rerum veniam hic reprehenderit repellendus quibusdam facere, magni fuga odit delectus quidem error quod doloribus consectetur.
