--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
 
     <h1>PixelVivo</h1>
 
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, earum ipsa laudantium accusamus laboriosam rerum veniam hic reprehenderit repellendus quibusdam facere, magni fuga odit delectus quidem error quod doloribus consectetur.
-        Voluptatibus, temporibus quia unde nisi non necessitatibus eveniet perspiciatis qui porro magni saepe corporis eaque quisquam nihil ea recusandae laudantium consectetur fuga natus, et quas? Reiciendis labore iure commodi ab.
-        Nisi veniam, quasi modi quidem facere atque consequatur. Dolor officiis praesentium obcaecati beatae, porro magni, iure sequi omnis aut laborum illum, non quam a fugit sed nihil! Quo, voluptates ipsam!
-    </p>
+    <!-- <p> -->
+        <h2>PAGINA PARA ACESSA LISTA DOS APROVADOS DO PIXELVIVO.</h1>
+    <!-- </p> -->
 
 
 <button>
     <a href="lista_senai.html">LISTA</a>
-    
 </button>
 
+
+<!-- 
 <hr>
 
     <button>
@@ -36,7 +35,7 @@
 
     <button>
         <a href="http://OperaGX.com.br">OPERA</a>
-    </button>
+    </button> -->
 
 
 
