--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PixelVivo.com.br</title>
+    <title>teste</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- LOGO -->
+     <img src="assts/logo4.png" alt="logo" class="logo">
 
-    <img src="assets/logo-2.png" alt="">
+    <h2>
+        Bem-vindo ao nosso site de vendas de roupas! Aqui você encontrará uma ampla variedade de roupas para todas as ocasiões, desde peças casuais até roupas formais. Navegue por nossas categorias e descubra as últimas tendências da moda. Estamos comprometidos em oferecer produtos de alta qualidade e um excelente atendimento ao cliente. Aproveite suas compras e encontre o estilo perfeito para você!
+    </h2>
 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor velit dignissimos aperiam voluptate quam explicabo optio architecto accusamus sunt, minima, soluta ipsum odit illo asperiores reiciendis. Quidem minima libero non.
+        Recusandae incidunt perferendis iusto dolorem magnam corporis qui ut et tenetur doloremque, nobis quas quae eius vitae animi quidem aliquid assumenda vero explicabo accusantium neque! Quas sed fuga sunt laboriosam!
+        Blanditiis nihil omnis incidunt facere consequuntur harum delectus nostrum eos in quibusdam dolore odit id quis, atque cum non numquam aut? Magni dolores rem optio tempora. Ipsum et explicabo quis.
 
-
-    <h1>PixelVivo</h1>
-
-    <!-- <p> -->
-        <h2>PAGINA PARA ACESSA LISTA DOS APROVADOS DO PIXELVIVO.</h1>
-    <!-- </p> -->
-
-
-<button>
-    <a href="lista_senai.html">LISTA</a>
-</button>
-
-
-<!-- 
-<hr>
+        <!-- LINK -->
+         <a href="https://senaiweb6.fieb.org.br/framehtml/web/app/edu/PortalEducacional/login/" target="_blank">Portal do aluno</a>
+    </p>
 
     <button>
-        <a href="http://senai.com.br">SENAI</a>
+        Salvar
     </button>
-
-<hr>
-
-    <button>
-        <a href="http://OperaGX.com.br">OPERA</a>
-    </button> -->
-
-
 
 </body>
 </html>
