--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
     <!-- LOGO -->
      <img src="assts/logo4.png" alt="logo" class="logo">
 
@@ -20,12 +21,13 @@
         Blanditiis nihil omnis incidunt facere consequuntur harum delectus nostrum eos in quibusdam dolore odit id quis, atque cum non numquam aut? Magni dolores rem optio tempora. Ipsum et explicabo quis.
 
         <!-- LINK -->
-         <a href="https://senaiweb6.fieb.org.br/framehtml/web/app/edu/PortalEducacional/login/" target="_blank">Portal do aluno</a>
-    </p>
+         <!-- <a href="https://senaiweb6.fieb.org.br/framehtml/web/app/edu/PortalEducacional/login/" target="_blank">Portal do aluno</a>
+    </p> -->
 
     <button>
-        Salvar
+        <a href="segenda-pagina.html">Pagina Dois</a>
     </button>
 
+    
 </body>
 </html>
